# ultimate-minecraft

./: .gitattributes  .gitignore  Cargo.toml  ROADMAP.md  calculation.md  gateway-demo.yaml
.claude/: settings.local.json
bench_vanilla/: drive.ps1  escalate.ps1  mega.ps1
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/causal/: event.rs  graph.rs  mod.rs  scheduler.rs
crates/engine/src/rules/: mod.rs
crates/engine/src/world/: block.rs  chunk.rs  mod.rs  position.rs
crates/engine/tests/: causal_graph.rs
crates/server/: Cargo.toml
crates/server/examples/: bench_access.rs  bench_baseline.rs  bench_cluster.rs  bench_memory.rs  bench_parallel.rs  bench_partitioned.rs  bench_vs_vanilla.rs  diag_continuity.rs  load_test.rs  physics_peer.rs
crates/server/src/: block.rs  cluster.rs  config.rs  event_bus.rs  eviction.rs  lib.rs  main.rs  persistence.rs  physics.rs  placement.rs  player_registry.rs  simulation.rs
crates/server/src/dashboard/: index.html  metrics.rs  mod.rs  server.rs
crates/server/src/net/: connection.rs  listener.rs
crates/server/src/rules/: block_updates.rs  helpers.rs  light.rs  mod.rs
crates/server/src/worldgen/: biome.rs  carver.rs  climate.rs  decorator.rs  density.rs  mod.rs  noise_terrain.rs  pipeline.rs  preset.rs  surface.rs
crates/server/src/worldgen/presets/: noise.json  superflat.json
crates/server/tests/: block_ids.rs  causal_engine.rs  cluster.rs  physics_service.rs
docs/: ROADMAP.md  WISHLIST.md
presets/: README.md  amplified.json
